home page placeholder content

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,3 +1,39 @@
 ---
-layout: layouts/base
+layout: base
+title: Home
+permalink: '/'
+heading: A Mildly Opinionated Eleventy Starter Kit
 ---
+
+<article>
+    <h2>
+        {{ heading }}
+    </h2>
+    <p>
+        Macaroon marzipan bear claw icing cake cotton candy liquorice I love oat
+        cake. Chocolate sesame snaps powder shortbread icing sweet liquorice
+        sweet. Marzipan soufflé chupa chups I love I love. Powder I love cotton
+        candy candy marzipan sesame snaps tootsie roll. Muffin chocolate bar
+        pudding cake jelly toffee tootsie roll toffee.
+    </p>
+    <p>
+        I love cake pie cookie.love cake shortbread lemon drops wafer I love
+        tart. Fruitcake toffee I love muffin cupcake tart. Toffee danish
+        cheesecake brownie gummies sweet I love pudding. Chocolate bar cookie
+        shortbread jelly pastry shortbread pudding. Cupcake tootsie roll jelly-o
+        muffin marshmallow cookie.
+    </p>
+    <h3>Bullet List</h3>
+    <ul>
+        <li>Lollipop</li>
+        <li>Apple pie</li>
+        <li>Caramels</li>
+    </ul>
+    <p>
+        Pudding marzipan candy I love cake shortbread candy jelly cookie. Sugar
+        plum I love cheesecake oat cake lemon drops. Dragée chocolate jelly-o
+        icing I love topping. Tiramisu pastry ice cream marshmallow topping
+        cotton candy marshmallow. Bear claw carrot cake carrot cake tart cake
+        pastry. Powder chocolate cake pie cake wafer.
+    </p>
+</article>
