--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -1,1 +1,10 @@
-<footer>Footer</footer>
+<footer>
+  <div id="footer--container">
+    <div id="footer--left">
+      {{ site.name | lower }}
+    </div>
+    <div id="footer--right">
+      {{ site.copyright }}
+    </div>
+  </div>
+</footer>
