about page html

--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -1,4 +1,12 @@
 ---
-layout: layouts/base
+layout: base
 permalink: /about/
 ---
+
+<article>
+    <h2>About {{ site.name }}</h2>
+    <p>
+        {{ site.name }} is a small 11ty starter project to help you build your
+        next project.
+    </p>
+</article>
