--- a/src/includes/layouts/base.njk
+++ b/src/includes/layouts/base.njk
@@ -11,7 +11,7 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div id="main--container">
+    <div id="main-container">
       {% include "partials/header.njk" %}
       <main>
           {{ content | safe }}
