--- a/src/tags.njk
+++ b/src/tags.njk
@@ -1,3 +1,23 @@
 ---
-layout: layouts/base
+layout: base
+title: Tags
+pagination:
+    data: collections
+    size: 3
+    alias: tag
+    filter:
+      - all
+    permalink: /tags/{{ tag }}/
 ---
+
+<h2>Posts filed under “{{ tag }}”</h2>
+<ul>
+    {% set postlist = collections[ tag ] %} 
+    {% for post in postlist | reverse %}
+    <li>
+        <a href="{{ post.url | url }}">{{ post.data.title }}</a>
+        <time>{{ post.date }}</time>
+    </li>
+    {% endfor %}
+</ul>
+<p>See <a href="{{ '/tags/' | url }}">all tags</a>.</p>
