about paragraph added

--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -9,4 +9,7 @@ permalink: /about/
         {{ site.name }} is a small 11ty starter project to help you build your
         next project.
     </p>
+    <p>
+        Built with love ❤️ and coffee ☕️ in Georgia.
+    </p>
 </article>
