footer data added

--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -1,9 +1,11 @@
 <footer>
   <div id="footer--container">
     <div id="footer--left">
-      {{ site.name | lower }}
+      <a href="{{ site.githubUrl }}">
+        {{ site.name | lower }} 
+      </a>
     </div>
-    <div id="footer--right">
+    <div id="footer--right"> 
       {{ site.copyright }}
     </div>
   </div>
