base styling added; layout styling begun;

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -7,8 +7,11 @@ Main Style Sheet
 
 // Base Styles
 @import "base/reset"; 
+@import "base/normalize"; 
+@import "base/layout";
 
 // Component Styles
-
+@import "components/header";
+@import "components/footer";
 
 // Tool Styles
