--- a/src/includes/partials/meta.njk
+++ b/src/includes/partials/meta.njk
@@ -2,11 +2,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>{{ title }} | {{ site.name }}</title>
 <link rel="canonical" href="{{site.url}}{{ permalink }}" />
-<link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
-<link rel="manifest" href="/images/icons/site.webmanifest">
-<link rel="mask-icon" href="/images/icons/safari-pinned-tab.svg" color="#7798ab">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+<link rel="manifest" href="/assets/images/icons/site.webmanifest">
+<link rel="mask-icon" href="/assets/images/icons/safari-pinned-tab.svg" color="#7798ab">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#f8f8f8">
 <meta property="og:site_name" content="{{ site.name }}" />
