--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -1,10 +1,12 @@
 <header>
-  <div id="header--container">
-    <div id="header--left">
-      {{ site.name | lower }}
+    <div id="header--container">
+        <div id="header--left">
+            <div id="header--title">
+                <a href="" title="{{ site.name }} - {{ site.description }}">
+                    {{ site.name | lower }}
+                </a>
+            </div>
+        </div>
+        <div id="header--right">{% include "partials/nav.njk" %}</div>
     </div>
-    <div id="header--right">
-      {% include "partials/nav.njk" %}
-    </div>
-  </div>
 </header>
