placeholder content edit

--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -6,13 +6,13 @@
       </a>
     </div>
     <div id="footer--middle">
-      <a href="{{ site.githubUrl }}">
+      <a href="{{ site.githubUrl }}/tree/master/{{page.inputPath}}" title="Edit this page">
         {% svgsprite %}
         {% icon "github" %}
       </a>
     </div>
     <div id="footer--right"> 
-      &copy;{{ site.copyright }}
+      &copy; {{ site.copyright }}
     </div>
   </div>
 </footer>
