--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -2,11 +2,12 @@
     <div id="header--container">
         <div id="header--left">
             <div id="header--title">
-                <a href="" title="{{ site.name }} - {{ site.description }}">
+                <a href="/" title="{{ site.name }} - {{ site.description }}">
                     {{ site.name | lower }}
                 </a>
             </div>
         </div>
         <div id="header--right">{% include "partials/nav.njk" %}</div>
     </div>
-</header>
+</header>  
+     
