--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -1,15 +1,16 @@
 ---
 layout: base
 permalink: /about/
+title: About
 ---
 
 <article>
     <h2>About {{ site.name }}</h2>
     <p>
-        {{ site.name }} is a small 11ty starter project to help you build your
+        {{ site.name }} is a small <a href="https://11ty.dev">11ty</a> starter project built by Matt DeCamp to help you build your
         next project.
     </p>
     <p>
-        Built with love ❤️ and coffee ☕️ in Georgia.
+        Made with love ❤️ and coffee ☕️ in Georgia 🍑.
     </p>
 </article>
