--- a/src/index.njk
+++ b/src/index.njk
@@ -2,26 +2,19 @@
 layout: base
 title: Home
 permalink: '/'
-heading: A Mildly Opinionated Eleventy Starter Kit
+heading: A Mildly Opinionated Eleventy Starter
 ---
 
 <article>
-    <h2>
+    <h1>
         {{ heading }}
-    </h2>
+    </h1>
     <p>
         Macaroon marzipan bear claw icing cake cotton candy liquorice I love oat
         cake. Chocolate sesame snaps powder shortbread icing sweet liquorice
         sweet. Marzipan soufflé chupa chups I love I love. Powder I love cotton
         candy candy marzipan sesame snaps tootsie roll. Muffin chocolate bar
         pudding cake jelly toffee tootsie roll toffee.
-    </p>
-    <p>
-        I love cake pie cookie.love cake shortbread lemon drops wafer I love
-        tart. Fruitcake toffee I love muffin cupcake tart. Toffee danish
-        cheesecake brownie gummies sweet I love pudding. Chocolate bar cookie
-        shortbread jelly pastry shortbread pudding. Cupcake tootsie roll jelly-o
-        muffin marshmallow cookie.
     </p>
     <h3>Bullet List</h3>
     <ul>
