--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -1,10 +1,30 @@
-nav {
-  & ul {
-    list-style-type: none;
+nav ul {
+    padding: 0;
+    display: block;
     display: flex;
     flex-direction: row;
-    gap: var(--s0);
+    flex-wrap: wrap;
+    list-style-type: none;
+    gap: var(--s0) var(--s2);
+    font-size: var(--s0);
+    & li::before {
+        content: '\200B';
+    }
+    & li a {
+        color: var(--text);
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
 
-    font-size: var(--s1);
-  }
+.nav--active {
+    text-decoration: underline;
+}
+
+@media screen and (min-width: 48rem) {
+    nav ul {
+        font-size: var(--s1);
+    }
 }
