post-list and icons styling sheets added to main file

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,5 +17,6 @@ Main Style Sheet
 @import "components/header";
 @import "components/footer";
 @import "components/nav";
-@import "components/icons"
+@import "components/post-list";
+@import "components/icons";
 // Tool Styles
