--- a/src/includes/layouts/post.njk
+++ b/src/includes/layouts/post.njk
@@ -1,13 +1,15 @@
 ---
 layout: base
 ---
-<p>&laquo; Back to posts</p>
+
+<p>
+    <a href="../"> &laquo; Back to posts</a>
+</p>
 <article>
-  <h2>{{ title }}</h2>
-  <time>{{ date | dateFilter }}</time>
-  {{ content | safe }}
-  {% for tag in tags %}
-  {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
-  <a href="{{ tagUrl | url }}">{{ tag }}</a>
-  {% endfor %}
+    <h2>{{ title }}</h2>
+    <time>{{ date | dateFilter }}</time>
+    {{ content | safe }}
+    {% for tag in tags %} {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
+    <a href="{{ tagUrl | url }}">{{ tag }}</a>
+    {% endfor %}
 </article>
