--- a/src/404.njk
+++ b/src/404.njk
@@ -1,4 +1,10 @@
 ---
 layout: layouts/base
 permalink: 404.html
+title: Page Not Found
 ---
+
+<article>
+  <h1>404!</h1>
+  <p>Page not found.</p>
+</article>
