--- a/src/500.njk
+++ b/src/500.njk
@@ -1,4 +1,10 @@
 ---
 layout: layouts/base
 permalink: 500.html
+title: Internal Server Error
 ---
+
+<article>
+  <h1>500</h1>
+  <p>Internal Server Error.</p>
+</article>
