variable creation and renaming
Added primary, secondary, text-primary, text-tertiary, and changed link-color

--- a/src/assets/styles/utility/_variables.scss
+++ b/src/assets/styles/utility/_variables.scss
@@ -4,11 +4,14 @@
   --background-color-secondary: #301e4e;
   --background-color-tertiary: #ff6e6c;
 
-  --text: #1f1135;
-  --text-secondary: #ffffff;
-  --sub-headline: #301e4e;
+  --primary: #1f1135;
+  --secondary: #ff6e6c;
 
-  --link-color: #ff6e6c;
+  --text-primary: #1f1135;
+  --text-secondary: #ffffff;
+  --text-tertiary: #301e4e;
+
+  --link-color: #301e4e;
 
   --tag-color: #301e4e;
 
