--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,5 +18,6 @@ Main Style Sheet
 @import "components/footer";
 @import "components/nav";
 @import "components/post-list";
+@import "components/tags";
 @import "components/icons";
 // Tool Styles
