post-list styling
adjusted margin-bottom for articles in post list

--- a/src/assets/styles/components/_post-list.scss
+++ b/src/assets/styles/components/_post-list.scss
@@ -1,3 +1,6 @@
-#posts--list article {
-  margin-bottom: var(--s1);
+#posts--list {
+  
+    & article {
+        margin-bottom: var(--s2);
+    }
 }
