--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,6 +18,6 @@ Main Style Sheet
 @import "components/footer";
 @import "components/nav";
 @import "components/post-list";
+@import "components/post";
 @import "components/tags";
 @import "components/icons";
-// Tool Styles
