Removed placeholder content

--- a/src/index.njk
+++ b/src/index.njk
@@ -10,23 +10,15 @@ heading: A Mildly Opinionated Eleventy Starter
         {{ heading }}
     </h1>
     <p>
-        Macaroon marzipan bear claw icing cake cotton candy liquorice I love oat
-        cake. Chocolate sesame snaps powder shortbread icing sweet liquorice
-        sweet. Marzipan soufflé chupa chups I love I love. Powder I love cotton
-        candy candy marzipan sesame snaps tootsie roll. Muffin chocolate bar
-        pudding cake jelly toffee tootsie roll toffee.
+        Features include: 
+        <ul>
+            <li>CSS Pipeline (Sass > CleanCSS)</li>
+            <li>HTML Minification</li>
+            <li>Eleventy SVG Sprites</li>
+            <li>Eleventy RSS</li>
+            <li>Post Date Formatting Filter</li>
+        </ul>
     </p>
-    <h3>Bullet List</h3>
-    <ul>
-        <li>Lollipop</li>
-        <li>Apple pie</li>
-        <li>Caramels</li>
-    </ul>
-    <p>
-        Pudding marzipan candy I love cake shortbread candy jelly cookie. Sugar
-        plum I love cheesecake oat cake lemon drops. Dragée chocolate jelly-o
-        icing I love topping. Tiramisu pastry ice cream marshmallow topping
-        cotton candy marshmallow. Bear claw carrot cake carrot cake tart cake
-        pastry. Powder chocolate cake pie cake wafer.
-    </p>
+    <p>Visit the eleventonia repo for more information.</p>
+    
 </article>
