Swapped margin-bottom for padding-bottom

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -9,7 +9,7 @@
     width: 90%;
     max-width: var(--max-width);
     margin: 0 auto;
-    margin-bottom: var(--s1);
+    padding-bottom: var(--s1);
     flex: 1 0 auto;
     overflow:hidden;
     & main {
