--- a/src/includes/layouts/base.njk
+++ b/src/includes/layouts/base.njk
@@ -3,8 +3,11 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="{{ site.lang}}">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <title>{{ title }} | {{ site.name }}</title>
     {% include "partials/meta.njk" %}
     <link rel="stylesheet" href="{{ '/assets/styles/main.css' | url }}">
   </head>
@@ -12,7 +15,7 @@
     <div id="layout">
       {% include "partials/header.njk" %}
       <div id="main-container" role="document">
-        <main>
+        <main role="main">
             {{ content | safe }}
         </main>
       </div>
