--- a/src/includes/partials/posts-list.njk
+++ b/src/includes/partials/posts-list.njk
@@ -6,9 +6,9 @@
                 {{ post.data.title }}
             </h2>
         </a>
-        <time class="post--time" datetime="{{ post.data.date }}">
+        <p class="post--time" datetime="{{ post.data.date }}">
             {{ post.data.date | dateFilter }}
-        </time>
+        </p>
         <p>
             {{ post.data.page.excerpt }}
         </p>
