roles added to header, footer, and nav tags

--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -1,4 +1,4 @@
-<header>
+<header role="banner">
     <div id="header--container">
         <div id="header--left">
             <div id="header--title">
