--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer>
+<footer role="contentinfo">
   <div id="footer--container">
     <div id="footer--left">
       <a href="{{ site.githubUrl }}">
