post excerpt feature added to list

--- a/src/index.njk
+++ b/src/index.njk
@@ -17,8 +17,8 @@ heading: A Mildly Opinionated Eleventy Starter
             <li>Eleventy SVG Sprites</li>
             <li>Eleventy RSS</li>
             <li>Post Date Formatting Filter</li>
+            <li>Post Excerpts</li>
         </ul>
     </p>
-    <p>Visit the eleventonia repo for more information.</p>
-    
+    <p>Visit the <a href="{{ site.githubUrl }}">eleventonia repo</a> for more information.</p>
 </article>
