--- a/src/includes/partials/meta.njk
+++ b/src/includes/partials/meta.njk
@@ -10,13 +10,16 @@
 <meta property="og:title" content="{{ site.name }} | {{ title }}" />
 <meta property="og:description" content="{{ meta.description }}" />
 <meta property="og:image:alt" content="Page image for {{ site.name }}" />
+<meta name="twitter:card" content="summary" />
 {# Favicon #}
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
-<link rel="manifest" href="/assets/images/icons/site.webmanifest">
-<link rel="mask-icon" href="/assets/images/icons/safari-pinned-tab.svg" color="#7798ab">
+<link rel="manifest" href="/assets/images/site.webmanifest">
+<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#333333">
+<link rel="shortcut icon" href="/assets/images/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#f8f8f8">
+<meta name="msapplication-config" content="/assets/images/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 {# RSS #}
 <link type="application/atom+xml" rel="alternate" href="{{ meta.url }}/feed.xml" title="{{ meta.title }}">
