--- a/src/includes/layouts/base.njk
+++ b/src/includes/layouts/base.njk
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>{{ title }} | {{ site.name }}</title>
     {% include "partials/meta.njk" %}
-    <link rel="stylesheet" href="{{ '/assets/styles/main.css' | url }}">
+    {% set css %}
+      {% include "styles/main.css" | url %}
+    {% endset %}
+    <style>
+      {{ css | cssmin | safe }}
+    </style>
   </head>
   <body>
     <div id="layout">
