Updated list of features for v2

--- a/src/index.njk
+++ b/src/index.njk
@@ -12,8 +12,9 @@ heading: A Mildly Opinionated Eleventy Starter
     <p>
         Features include: 
         <ul>
-            <li>CSS Pipeline (Sass > CleanCSS)</li>
             <li>HTML Minification</li>
+            <li>CSS Pipline (SCSS > CleanCSS > Inline)</li>
+            <li>Eleventy Dev Server</li>
             <li>Eleventy SVG Sprites</li>
             <li>Eleventy RSS</li>
             <li>Post Date Formatting Filter</li>
